@@ -25,7 +25,21 @@ import java.util.concurrent.*;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+
 import static gruppo2.DirectoryChecker.*;
+
+import javafx.collections.FXCollections;
+import javafx.collections.ObservableList;
+import javafx.event.ActionEvent;
+import javafx.fxml.FXML;
+import javafx.fxml.Initializable;
+import javafx.scene.control.*;
+import javafx.scene.control.cell.PropertyValueFactory;
+import javafx.scene.layout.AnchorPane;
+import javafx.stage.DirectoryChooser;
+
+import static javafx.collections.FXCollections.observableArrayList;
+
 
 public class FXMLDocumentController implements Initializable {
 
@@ -48,7 +62,10 @@ public class FXMLDocumentController implements Initializable {
     private TextArea corpoDocumento;
 
     @FXML
-    private TextArea statisticheDocumento;
+    private Label statisticheDocumentoLabel;
+
+    @FXML
+    private Label collectionStatisticsLabel;
 
     @FXML
     private Button chiudiDocumento;
@@ -59,13 +76,16 @@ public class FXMLDocumentController implements Initializable {
     @FXML
     private TableColumn<Document, String> titleColumn;
 
-    private final ObservableList<Document> documents = FXCollections.observableArrayList();
+    @FXML
+    private ProgressIndicator progressIndicator;
 
-    private static ConcurrentMap<String, Integer> vocabolario = new ConcurrentHashMap<>();
+    private final ObservableList<Document> documents = observableArrayList();
 
-    private static Map<Document, Double> corrispondenzaSimiliarita = new TreeMap<>(Collections.reverseOrder());
+    private static final ConcurrentMap<String, Integer> vocabolario = new ConcurrentHashMap<>();
 
-    private static Map<Document, Map<String, Integer>> resultMapByDocument = new ConcurrentHashMap<>();
+    private static final Map<Document, Double> corrispondenzaSimiliarita = new TreeMap<>(Collections.reverseOrder());
+
+    private static final Map<Document, Map<String, Integer>> resultMapByDocument = new ConcurrentHashMap<>();
 
     private List<String> stopwords;
 
@@ -106,15 +126,26 @@ public class FXMLDocumentController implements Initializable {
         }
     }
 
+
+    // Gestisce la query inserita dall'utente
     @FXML
     private void handleQuery() {
         String queryText = queryTf.getText();
+
+        // Se la query è vuota, vengono mostrati tutti i documenti;
         if (queryText == null || queryText.trim().isEmpty()) {
             System.out.println("ciao");
             List<Document> allDocuments = new ArrayList<>(resultMapByDocument.keySet());
             System.out.println(allDocuments);
             tableView.setItems(FXCollections.observableArrayList(allDocuments));
+
+            updateCollectionStatistics(allDocuments);
         } else {
+            /* Altrimenti vengono mostrati solo i documenti filtrati in base alla similarità:
+            - pulisce la query dalle stopwords;
+            - crea un vettore dalla query e calcola la somiglianza tra la query e i documenti usando il coseno di similarità;
+            - ordina i documenti in base alla somiglianza;
+            - aggiorna infine la tabella per mostrare i risultati */
             String cleanedQuery = cleanAndRemoveStopwords(queryText);
             Map<String, Integer> queryVector = textToVector(cleanedQuery);
             corrispondenzaSimiliarita.clear();
@@ -125,23 +156,25 @@ public class FXMLDocumentController implements Initializable {
                 }
             }
 
-            List<Map.Entry<Document, Double>> sortedSimilarities = corrispondenzaSimiliarita.entrySet().stream()
-                    .sorted(Map.Entry.comparingByValue(Comparator.reverseOrder()))
-                    .toList();
-            List<Document> sortedDocuments = sortedSimilarities.stream()
-                    .map(Map.Entry::getKey)
-                    .collect(Collectors.toList());
-            tableView.setItems(FXCollections.observableArrayList(sortedDocuments));
-            System.out.println("ciao2");
+            List<Map.Entry<Document, Double>> sortedSimilarities = corrispondenzaSimiliarita.entrySet().stream().sorted(Map.Entry.comparingByValue(Comparator.reverseOrder())).collect(Collectors.toList());
+            List<Document> sortedDocuments = sortedSimilarities.stream().map(Map.Entry::getKey).collect(Collectors.toList());
+            tableView.setItems(observableArrayList(sortedDocuments));
+            updateCollectionStatistics(sortedDocuments);
         }
     }
 
+
+    //  Converte il testo di un documento  in un vettore di frequenze delle parole
     private Map<String, Integer> textToVector(String text) {
         Map<String, Integer> vector = new TreeMap<>();
+
+        // ogni parola nel testo diventa una chiave nella mappa e il valore associato è il numero di occorrenze di quella parola
         Arrays.stream(text.split("\\s+")).forEach(word -> vector.merge(word, 1, Integer::sum));
         return vector;
     }
 
+
+    // Calcola il coseno di similarità tra due vettori: misura quanto sono simili due vettori
     private static double calculateCosineSimilarity(Map<String, Integer> vector1, Map<String, Integer> vector2) {
         double dotProduct = 0.0;
         double normA = 0.0;
@@ -163,18 +196,24 @@ public class FXMLDocumentController implements Initializable {
         }
     }
 
+
+    // Carica le stopwords da un file e le inserisce in una lista
     public void loadStopwords() throws IOException {
         File stopwordsFile = new File("stopwords-it.txt");
+
         if (stopwordsFile.exists()) {
             this.stopwords = Files.readAllLines(stopwordsFile.toPath());
         } else {
+            // Se il file non esiste, la lista di stopwords sarà vuota
             this.stopwords = new ArrayList<>();
             System.out.println("Stopwords file not found.");
         }
     }
 
+
     @FXML
     private void folderSelection(ActionEvent event) throws IOException {
+        // Viene creato un oggetto DirectoryChooser che permette all'utente di selezionare una cartella
         DirectoryChooser directoryChooser = new DirectoryChooser();
         directoryChooser.setTitle("Seleziona una cartella");
         File selectedDirectory = directoryChooser.showDialog(null);
@@ -265,6 +304,8 @@ public class FXMLDocumentController implements Initializable {
         return documentList;
     }
 
+
+    // Legge un documento da un file
     private Document readDocumentFromFile(File file) {
         return getDocument(file);
     }
@@ -289,9 +330,15 @@ public class FXMLDocumentController implements Initializable {
         }
     }
 
+
+    // Crea il vocabolario e i vettori di documenti
     private void createVocabularyAndVectors(List<Document> documents) {
         List<Future<Void>> futures = new ArrayList<>();
 
+        /* Per ogni documento viene inviato un task all'executorService per:
+           - pulisce il testo rimuove le stopwords;
+           - aggiunge le parole del testo senza stopwords, al vocabolario;
+           - creare un vettore di frequenza delle parole */
         for (Document document : documents) {
             futures.add(executorService.submit(() -> {
                 String cleanedText = cleanAndRemoveStopwords(document.getTitle() + " " + document.getDocument_text());
@@ -311,21 +358,37 @@ public class FXMLDocumentController implements Initializable {
         }
     }
 
+
+    // Pulisce il testo del documento e rimuove le stopwrods
     private String cleanAndRemoveStopwords(String text) {
+        /* Pulizia:
+          - sostituisce tutti gli apostrofi con spazi;
+          - rimuove tutti i caratteri non alfabetici e non spazi (\p{L} è una proprietà Unicode che rappresenta tutte le lettere);
+          - converte tutto il testo in minuscolo per uniformità */
         String cleanedText = text.replaceAll("'", " ").replaceAll("[^\\p{L}\\s]", " ").toLowerCase();
-        List<String> words = Stream.of(cleanedText.split("\\s+"))
-                .filter(word -> !stopwords.contains(word))
-                .collect(Collectors.toList());
+
+        /* Rimozione stopwrdos:
+           - divide il testo pulito in parole, usando gli spazi come delimitatori;
+           - filtra le parole, rimuovendo quelle presenti nella lista delle stopwords;
+           - colleziona le parole filtrate in una lista */
+        List<String> words = Stream.of(cleanedText.split("\\s+")).filter(word -> !stopwords.contains(word)).collect(Collectors.toList());
+
+        // Unisce le parole rimanenti in una singola stringa separata da spazi.
         return String.join(" ", words);
     }
 
+
+    /* Divide il testo in parole usando gli spazi come delimitatori e aggiorna il vocabolario: per ogni parola aggiorna il relativo conteggio nel
+    vocabolario (aggiunge la parola al vocabolario con un conteggio di 1 se non è presente, altrimenti incrementa il conteggio di 1) */
     private void addWordsToVocabulary(String text) {
         Arrays.stream(text.split("\\s+")).forEach(parola -> vocabolario.merge(parola, 1, Integer::sum));
     }
 
+
+    // Quando viene selezionato un documento con un click, viene mostrato il suo contenuto
     private void selezionaDocumento() {
         tableView.setOnMouseClicked(event -> {
-            if (event.getClickCount() == 1) { // Doppio click
+            if (event.getClickCount() == 1) {
                 Document documentoSelezionato = tableView.getSelectionModel().getSelectedItem();
                 if (documentoSelezionato != null) {
                     mostraContenutoDocumento(documentoSelezionato);
@@ -334,6 +397,8 @@ public class FXMLDocumentController implements Initializable {
         });
     }
 
+
+    // Recupera il testo del documento selezionato e mostra anche le relative statistiche
     private void mostraContenutoDocumento(Document documentoSelezionato) {
         pane2.setVisible(false);
         paneDocumento.setVisible(true);
@@ -342,12 +407,16 @@ public class FXMLDocumentController implements Initializable {
         mostrastatisticheDocumento(documentoSelezionato);
     }
 
+
+    // Chiude il documento che era stato selezionato
     @FXML
     public void chiudiDocumento() {
         paneDocumento.setVisible(false);
         pane2.setVisible(true);
     }
 
+
+    // Calcola le statistiche sul documento selezionato
     @FXML
     public void mostrastatisticheDocumento(Document documentoSelezionato) {
         String testoDocumento = documentoSelezionato.getDocument_text();
@@ -375,7 +444,10 @@ public class FXMLDocumentController implements Initializable {
         statsMessage.append("Le 5 parole più comuni sono:\n");
         commonWords.forEach(entry -> statsMessage.append(entry.getKey()).append(": ").append(entry.getValue()).append("\n"));
 
-        // Impostazione del messaggio di statistica
-        statisticheDocumento.setText(statsMessage.toString());
+        statisticheDocumentoLabel.setText(statsMessage.toString());
+    }
+
+    private void updateCollectionStatistics(List<Document> documents) {
+        collectionStatisticsLabel.setText("Qui devono esserci le statistiche dell'intera collezione");
     }
 }
